# sigtime

./: .gitignore  README.md  compute_dtw_for_trained.py  docker-compose.yml  main.cc
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: api.py  config.py  models.py  normalize.py  test.py  utils.py
backend/data/: catch.py
backend/data/ECG200/: X_train.csv  label.csv  match_end.csv  match_start.csv  output_shapelet.json  shapelet_transform.csv
backend/data/ECG200_2/: match_end.csv  match_start.csv  output_shapelet.json  shapelet_transform.csv
backend/data/ECG200_JOINT_20/: label.csv  match_end.csv  match_start.csv  output_shapelet.json  shapelet_transform.csv
backend/data/ECG200_Norm/: X_train.csv  label_all.csv  match_end.csv  match_start.csv  output_shapelet.json  script_all.csv  shapelet_transform.csv
backend/data/ECG200_Norm_Joint/: match_end.csv  match_start.csv  min_shapelet_transform.csv  output_shapelet.json  shapelet_transform.csv
backend/data/ECG200_old/: pos_record.csv  shapelet_transform.csv  shapelets.csv  x_test.csv  y_test.csv
backend/data/ECG5000/: label_all.csv  match_start.csv
backend/data/ECG5000_0808/: label.csv  match_end.csv  match_start.csv  output_shapelet.json  output_shapelet_with_dtw.json  output_shapelet_with_dtw_sorted.json  shapelet_transform.csv  shapelet_with_importance.json
backend/data/ECG5000_New/: output_shapelet.json  output_shapelet_with_dtw.json
backend/data/ECG5000_New_old/: match_start.csv  shapelet_transform.csv
backend/data/ECG5000_demo/: X_train.csv  label.csv  (+5 more)
(+135 files in other folders)
